[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tomato_so_arm101"
version = "0.1.0"
description = "UROP project - SO-ARM101 robot arm with Isaac Lab"
requires-python = "==3.11.*"

dependencies = [
    # Isaac Lab ecosystem (installed separately via NVIDIA)
    # isaaclab, isaaclab_assets, isaaclab_tasks, isaaclab_rl, isaaclab_mimic, isaaclab_contrib
    # isaacsim==5.1.0.0

    # Deep learning
    # torch==2.7.0+cu128  (installed separately: pip install torch --index-url https://download.pytorch.org/whl/cu128)
    # torchvision==0.22.0+cu128
    "numpy==1.26.4",
    "scipy>=1.15.3",
    "einops>=0.8.2",

    # Reinforcement learning
    "gymnasium>=1.2.1",
    "stable-baselines3>=2.7.1",
    "skrl>=1.4.3",
    "rl_games>=1.6.1",
    "ray>=2.52.1",

    # Robot kinematics / dynamics
    # pin (pinocchio) and pin_pink installed via cmeel
    "pytransform3d>=3.14.4",
    "dex_retargeting>=0.4.6",
    "anytree>=2.13.0",

    # Computer vision
    "opencv-python-headless>=4.11.0.86",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "moviepy>=2.2.1",
    "pillow>=11.3.0",
    "trimesh>=4.5.1",

    # ML / model management
    "transformers>=4.57.6",
    "safetensors>=0.7.0",
    "huggingface-hub>=0.36.2",
    "onnx>=1.21.0",
    "tensordict>=0.11.0",
    "robomimic>=0.3.0",

    # Config management
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "pydantic>=2.11.10",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.2.2",

    # Logging / experiment tracking
    "tensorboard>=2.20.0",
    "wandb>=0.25.1",
    "matplotlib>=3.10.3",
    "pandas>=3.0.2",

    # Serving / API
    "fastapi>=0.115.7",
    "uvicorn>=0.29.0",
    "pyjwt>=2.12.1",

    # Utilities
    "click>=8.1.7",
    "tqdm>=4.67.3",
    "rich>=14.3.3",
    "requests>=2.32.3",
    "ipython>=9.10.1",
    "psutil>=5.9.8",
    "filelock>=3.25.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "coverage>=7.4.4",
]
cloud = [
    "boto3>=1.39.11",
    "aioboto3>=15.1.0",
    "azure-storage-blob>=12.17.0",
    "azure-identity>=1.13.0",
]

[project.scripts]
train = "tomato_so_arm101.scripts.rsl_rl.train:main"
play = "tomato_so_arm101.scripts.rsl_rl.play:main"
list_envs = "tomato_so_arm101.scripts.list_envs:main"
zero_agent = "tomato_so_arm101.scripts.zero_agent:main"
random_agent = "tomato_so_arm101.scripts.random_agent:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
index-strategy = "unsafe-best-match"
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython' and python_version == '3.11' and platform_machine == 'x86_64'",
]

[[tool.uv.index]]
url = "https://pypi.nvidia.com/"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
